[gd_scene load_steps=16 format=3 uid="uid://dbp42d4xr6p01"]

[ext_resource type="Script" path="res://Enemies/enemy_bee.gd" id="1_2qlu1"]
[ext_resource type="Texture2D" uid="uid://dg6jtka113eq1" path="res://Assets/Graphics/sprites/sprites_enemies.png" id="2_c27yv"]
[ext_resource type="AudioStream" uid="uid://1mv5m4gj4aco" path="res://Assets/Sounds/sfx/bee_idle.wav" id="3_rxrky"]
[ext_resource type="AudioStream" uid="uid://dnxlofo4yg4ji" path="res://Assets/Sounds/sfx/bee_death.wav" id="4_6nlkh"]
[ext_resource type="AudioStream" uid="uid://b86wlkuhlqeoj" path="res://Assets/Sounds/sfx/effect_slash.wav" id="4_7tj50"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eoglg"]
atlas = ExtResource("2_c27yv")
region = Rect2(52, 888, 26, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr104"]
atlas = ExtResource("2_c27yv")
region = Rect2(78, 888, 26, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p88qa"]
atlas = ExtResource("2_c27yv")
region = Rect2(0, 888, 26, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6es4"]
atlas = ExtResource("2_c27yv")
region = Rect2(26, 888, 26, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkxs8"]
atlas = ExtResource("2_c27yv")
region = Rect2(0, 888, 26, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_spyga"]
atlas = ExtResource("2_c27yv")
region = Rect2(26, 888, 26, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cx1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoglg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr104")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"dead",
"speed": 7.0
}, {
"frames": [],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p88qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6es4")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkxs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spyga")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4klqh"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kt5p"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2h4lu"]
size = Vector2(384, 256)

[node name="enemyBee" type="CharacterBody2D" groups=["Persist", "enemies"]]
z_index = 1
texture_filter = 1
collision_layer = 0
safe_margin = 5.0
script = ExtResource("1_2qlu1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_5cx1g")
animation = &"idle"

[node name="AttackingTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="AttackedTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="DeadTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["enemies"]]
light_mask = 2
visibility_layer = 2
collision_layer = 6
collision_mask = 2
input_pickable = false
monitoring = false
monitorable = false

[node name="main_collision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4klqh")

[node name="patrolDirectionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0

[node name="followDelay" type="Timer" parent="patrolDirectionTimer"]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7kt5p")

[node name="particle_limiter" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="idle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rxrky")
volume_db = -10.0
autoplay = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7tj50")

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6nlkh")
volume_db = 5.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0.0980392)
rect = Rect2(-500, -500, 1000, 1000)

[node name="scanForPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="scanForPlayer_CollisionShape2D" type="CollisionShape2D" parent="scanForPlayer"]
unique_name_in_owner = true
position = Vector2(-192, 0)
shape = SubResource("RectangleShape2D_2h4lu")

[connection signal="timeout" from="AnimatedSprite2D/AttackingTimer" to="." method="_on_attacking_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/AttackedTimer" to="." method="_on_attacked_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/DeadTimer" to="." method="_on_dead_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="patrolDirectionTimer" to="." method="_on_patrol_direction_timer_timeout"]
[connection signal="timeout" from="patrolDirectionTimer/followDelay" to="." method="_on_follow_delay_timeout"]
[connection signal="timeout" from="particle_limiter" to="." method="_on_particle_limiter_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="offScreen_load"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="offScreen_unload"]
[connection signal="area_entered" from="scanForPlayer" to="." method="_on_scan_for_player_area_entered"]
[connection signal="area_exited" from="scanForPlayer" to="." method="_on_scan_for_player_area_exited"]
